# cranfield_retriever_reranker

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.json
hybrid-retrieval/: README.md  evaluate_rrf.py  rrf.py  search_rrf.py
pretrain-retrieval/: README.md
pretrain-retrieval/analysis/: dataset_eda_summary.json
pretrain-retrieval/artifacts/indexes/cranfield_minilm_finetuned/: documents.json
pretrain-retrieval/artifacts/indexes/cranfield_minilm_pretrain/: index.faiss
pretrain-retrieval/artifacts/models/cranfield_embedder/: README.md  __huggingface_repos__.json  (+1 more)
pretrain-retrieval/configs/: finetuned.json  pretrain.json
pretrain-retrieval/scripts/: train_kaggle.py
pretrain-retrieval/src/retrieval_pipeline/: __init__.py  config.py  schemas.py
scripts/: train_embedder.py  train_reranker.py
src/retrieval_pipeline/cli/: evaluate.py
src/retrieval_pipeline/data/: cranfield_loader.py
src/retrieval_pipeline/evaluation/: cranfield_eval.py
src/retrieval_pipeline/indexing/: build_index.py  faiss_index.py
src/retrieval_pipeline/models/: embedding_model.py  reranker_model.py
src/retrieval_pipeline/retrieval/: dense_retriever.py  pipeline.py
traditional-retrieval/: README.md
traditional-retrieval/data/: documents.csv  queries.csv
traditional-retrieval/source/: note.txt
traditional-retrieval/source/utils/: BM25_retriever.py  LSA.py  Tf_Idf_retriever.py  inverted_index.py  models.py  textPreprocessing.py
traditional-retrieval/test/: build_term_docs.ipynb  term_test.ipynb  test_bm25.ipynb  test_lsa.ipynb  test_tfidf.ipynb
(+11 files in other folders)
